[package]
name = "coreshift-lowlevel"
version = "0.1.0"
edition = "2024"
description = "Stable, policy-neutral substrate for Linux system policy engines"
license = "MPL-2.0"
repository = "https://github.com/CoreShiftD/coreshift-lowlevel"
readme = "README.md"
keywords = ["linux", "epoll", "inotify", "process", "spawn"]
categories = ["os::linux-apis", "asynchronous"]

[features]
default = ["std"]
std = []
pure = []

[dependencies]
libc = { version = "0.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
arrayvec = "0.7"
